[metadata]
name = korner
version = attr: korner.__version__
author = Arpad Rozsas
author_email = rozsasarpi@gmail.com
description = korner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rozsasarpi/korner
classifiers =
    Development Status :: 1 - Planning
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy<2
    scipy<2
    matplotlib<4

[options.extras_require]
tests =
    pytest
    coverage[toml]

lint_type_checks =
    pre-commit
    black
    isort
    mypy
    flake8
    flake8-tidy-imports
    flake8-import-order

docs =
    sphinx >=3, <4
    sphinx_gallery<1
    sphinx-copybutton<1
    sphinx-inline-tabs
    sphinxcontrib-bibtex<3
    myst-parser<1
    furo
